styles/orbital-command.less
@import 'ui-variables';
@import './font-awesome';
@import './tabs';

@border-color: fadeout(@base-border-color, 20%);
@background-color: @pane-item-background-color;
@header-color: @tab-bar-background-color;
@selected-color: @background-color-selected;
@input-color: @input-background-color;
@shadow-color: fadeout(@background-color-selected, 50%);
@marker-color: hsl(@ui-hue, 100%, 66%);

.orbital-command {
  width: 300px;
  height: 100%;
  position: relative;
  left: -1px;
  background-color: @background-color;
  border-left: 1px solid @border-color;
  overflow: auto;

  &__resizer {
    position: absolute;
    top: 0;
    left: -4px;
    bottom: 0;
    width: 8px;
    cursor: w-resize;
  }

  &__browser-icon {
    width: 16px;
    height: 16px;
    display: block;
    float: left;
  }

  &__browser-tab {

    &, webview {
      width: 100%;
      height: 100%;
    }

    &__heading {

      &.first {
        margin-left: auto !important;
      }

      .title img {
        margin: 8px 8px 0 0;
      }
    }
  }

  &__app {
    width: 100%;
    height: 100%;
    overflow: auto;
    cursor: default;

    section {

      &:last-of-type {
        border-bottom: 1px solid @border-color;
      }

      header {
        font-weight: normal;
        background-color: @header-color;
        border-top: 1px solid @border-color;
        box-shadow: inset 0 1px 0 @shadow-color;
        height: 30px;
        padding: 0 10px;
        line-height: 30px;

        &, .icon, .fa {
          color: @text-color-highlight;
        }

        .icon:before {
          font-size: 14px;
          width: 14px;
        }

        button {
          float: right;
          margin: 0 2px;
          line-height: 30px;
        }
      }

      ul {
        padding: 0;
        margin: 0;
        list-style-type: none;
        text-align: left;

        li {
          position: relative;
          display: block;
          height: 30px;
          padding: 0 10px;
          line-height: 30px;
          border-bottom: 1px solid @border-color;
          box-shadow: inset 0 1px 0 @shadow-color;

          &:first-child {
            border-top: 1px solid @border-color;
          }

          &:last-child {
            border-bottom: none;
          }

          & > span {
            display: inline-block;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            width: ~"calc(100% - 75px)";
          }

          img {
            margin: 3px 5px 0 0;
          }

          button {
            float: right;
            margin: 0 2px;
            line-height: 30px;
          }

          &.deleted {
            color: @text-color-error;
          }

          &.modified {
            color: @text-color-warning;
          }

          &.new {
            color: @text-color-success;
          }

          &.failed {
            opacity: 0.5;
          }

          &.selected {
            background-color: @selected-color;
            color: @text-color-highlight;

            &:before {
              content: '';
              display: block;
              position: absolute;
              top: 0;
              left: 0;
              bottom: 0;
              width: 2px;
              background-color: @marker-color;
            }
          }

          & > input[type='checkbox']:not(:checked) + span {
            color: @text-color-subtle;
          }
        }
      }
    }

    input[type='checkbox'] {
      -webkit-appearance: none;
      display: block;
      float: left;
      height: 12px;
      width: 12px;
      line-height: 12px;
      border: none;
      border-radius: 2px;
      margin: 8px 10px 0 0;
      outline: none;
      background-color: @input-color;

      &:checked:after {
        content: '';
        display: block;
        width: 6px;
        height: 6px;
        margin: 3px;
        border-radius: 1px;
        background-color: @text-color-subtle;
      }
    }

    input[type='text'] {
      display: block;
      width: 100%;
      height: 28px;
      padding: 3px 10px;
      line-height: 2em;
      border: none;
      border-top: 1px solid @border-color;
      background-color: @input-color;
    }

    button {
      border: none;
      border-radius: 2px;
      padding: 0;
      background-color: transparent;

      &, .fa {
        height: 16px;
        width: 16px;
        line-height: 16px;
        text-align: center;
        color: @text-color;
      }

      &.colored .fa-exclamation-triangle {
        color: @text-color-warning;
      }

      &.colored .fa-check {
        color: @text-color-success;
      }

      &:hover .fa {
        color: @text-color-highlight;
      }

      &.active .fa {
        color: @text-color-highlight;
      }
    }
  }

  .clipboard-copy {
    cursor: -webkit-grab;
    transition: all 300ms;

    &.clipboard-copied {
      color: @text-color-highlight;
    }
  }
}

